Freedom Sanbox Ant Deploy/src/objects/Service_Deliverables__c.object
<CustomObject>
    <fields>
        <fullName>Call__c</fullName>
        <description>Jan –Dec  values will be for New Member
Q1 – Q4 for ‘Ongoing Member’ record type</description>
        <label>Call</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be checked to true once the current financial year ends</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This will be last day of the current financial year</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Cheque Received Date + 1 yr (Entity/Renewal record)</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <description>Q1 – Q4 for “New Member”</description>
        <label>Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Half Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Half Year</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Deliverables</relationshipLabel>
        <relationshipName>Service_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This will 1st day of the current financial year</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Service Deliverable</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Service Deliverables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Deliverables</pluralLabel>
    <recordTypes>
        <fullName>New_Member</fullName>
        <active>true</active>
        <label>New Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing_Member</fullName>
        <active>true</active>
        <label>Ongoing Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>